--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,46 @@
-body {
+/* RESET AND COMMON STYLES */
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  height: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background-color: #7F00FF;
+  color: #fff;
+}
+
+body {
+  height: 100%;
+  font-family: 'Inconsolata', sans-serif;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
