--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #7F00FF;
+  background-color: #7f00ff;
   color: #fff;
 }
 
