--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .map {
   background-color: #7f00ff;
   flex: 1;
+  min-height: 100vh;
 }
 
 .sidebar {
@@ -12,7 +13,7 @@
   /* display: flex;
   flex-direction: column; */
   overflow-y: auto;
-  /* min-height: 100%; */
+  min-height: 100vh;
 }
 
 .sidebar__description {
@@ -149,11 +150,12 @@
   /* float: left; */
   /* width: 100%; */
   /* margin: 0 5px 5px 10px; */
-  flex: 1 1 30%;
-  background: url(http://maps.marnoto.com/en/5wayscustomizeinfowindow/images/vistalegre.jpg);
-  background-size: cover;
+  /* flex: 1 1 30%; */
+  /* background: url('./images/ImagePlaceholder.png'); */
+  /* background-size: cover; */
   margin: 0;
   padding: 0;
+  border: 1px solid red;
 }
 
 .infow__main__content {
@@ -178,4 +180,57 @@
 
 .infow__main__more {
   margin: 1rem 0 0 0;
+}
+
+/* CSS SPINNER - https://loading.io/css/ */
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 28px;
+    left: 28px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: -1px;
+    left: -1px;
+    width: 58px;
+    height: 58px;
+    opacity: 0;
+  }
+}
+
+.map-loading-message,
+.map-error-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.list-error-message{
+  /* width: 100%; */
+  /* height: 100vh; */
+  font-size: 0.7rem;
+  padding: 1rem;
+  margin: 3rem 0;
+  border: 1px solid red;
 }
