--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,43 @@
+/* MAIN APP STYLES */
+.main {
+  display: flex;
+  max-height: 100vh;
+}
+
 .map {
   background-color: #7f00ff;
   flex: 1;
-  min-height: 100vh;
+  height: 100vh;
 }
 
+.map-loading-message,
+.map-error-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+/* SIDEBAR STYLES */
 .sidebar {
   background: #673ab7;
   background: linear-gradient(to right, #673ab7, #7f00ff);
   padding: 1rem;
   color: #eee;
   flex: 0 0 25%;
-  /* display: flex;
-  flex-direction: column; */
   overflow-y: auto;
+  min-width: 250px;
   min-height: 100vh;
 }
 
-.sidebar__description {
-  text-align: center;
-}
-
-.main {
-  display: flex;
-  max-height: 100vh;
-}
-
-.header {
+.sidebar__header {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.header__filter-input {
-  padding: 0.8rem;
-  border: none;
-  font-size: 1.1rem;
-  flex: 1;
-  margin: 1rem 0;
-  border-radius: 0.5rem;
-}
-
-.sidebar__title {
-  color: #ffffff;
-  margin: 1.5rem 0;
-  text-align: center;
-  letter-spacing: 0.1rem;
-}
-
-.sidebar__icon {
+.sidebar__header__icon {
   display: inline-block;
   color: #fff;
   background-position: center;
@@ -62,6 +52,33 @@
   background-image: url('./icons/office.svg');
 }
 
+.sidebar__header__title {
+  color: #ffffff;
+  margin: 1.5rem 0;
+  text-align: center;
+  letter-spacing: 0.1rem;
+}
+
+.sidebar__header__description {
+  text-align: center;
+}
+
+.sidebar__header__filter-input {
+  padding: 0.8rem;
+  border: none;
+  font-size: 1.1rem;
+  flex: 1;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+}
+
+.list-error-message {
+  font-size: 0.7rem;
+  padding: 1rem;
+  margin: 3rem 0;
+}
+
+/* SIDEBAR LOCATION LIST SYLES */
 .location-card {
   background-color: #fff;
   padding: 1rem;
@@ -107,10 +124,10 @@
 }
 
 /* MAP INFO WINDOW STYLES */
-
 .infow__container {
   margin-bottom: 0.5rem;
   color: #333;
+  max-width: 400px;
 }
 
 .infow__header {
@@ -147,15 +164,8 @@
 }
 
 .infow__main__img {
-  /* float: left; */
-  /* width: 100%; */
-  /* margin: 0 5px 5px 10px; */
-  /* flex: 1 1 30%; */
-  /* background: url('./images/ImagePlaceholder.png'); */
-  /* background-size: cover; */
-  margin: 0;
+  margin-top: 1rem;
   padding: 0;
-  border: 1px solid red;
 }
 
 .infow__main__content {
@@ -166,12 +176,8 @@
 }
 
 .infow__main__subtitle {
-  /* font-size: 16px;
-  font-weight: 700; */
   color: #673ab7;
-  /* padding-bottom: 0.3rem; */
   margin: 0.5rem 0 0.3rem 0;
-  /* border-bottom: 1px solid #673ab7; */
 }
 
 .infow__main__content p {
@@ -182,8 +188,7 @@
   margin: 1rem 0 0 0;
 }
 
-/* CSS SPINNER - https://loading.io/css/ */
-
+/* CSS SPINNER - animation by https://loading.io/css/ */
 .lds-ripple {
   display: inline-block;
   position: relative;
@@ -217,20 +222,30 @@
   }
 }
 
-.map-loading-message,
-.map-error-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
-.list-error-message{
-  /* width: 100%; */
-  /* height: 100vh; */
-  font-size: 0.7rem;
-  padding: 1rem;
-  margin: 3rem 0;
-  border: 1px solid red;
+/* MEDIA QUERY STYLES */
+@media (max-width: 660px) {
+  .main {
+    flex-direction: column;
+  }
+  .map {
+    flex-grow: 0;
+    flex-shrink: 1;
+  }
+  .sidebar {
+    flex-grow: 0;
+    flex-shrink: 0;
+    min-height: 0;
+  }
+  .sidebar__icon {
+    display: none;
+  }
+  .sidebar__title {
+    margin: 0.5rem 0;
+  }
+  .header__filter-input {
+    display: none;
+  }
+  .locations-list {
+    display: none;
+  }
 }
